built the epoll native netty extension, checking in as binary. Added netty optimizations, for sub-100 (96) mic round trip.